# ufc-inspect

./: .gitignore  README.md  freetimegs_trainer.py  hello.py  process_video.py  pyproject.toml  run_pipeline.py  web_viewer.py
static/: viewer.js
templates/: viewer.html
ufc_inspect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
